--- a/.gitignore
+++ b/.gitignore
@@ -124,7 +124,6 @@ acs-*.bib
 # knitr
 *-concordance.tex
 # TODO Comment the next line if you want to keep your tikz graphics files
-*.tikz
 *-tikzDictionary
 
 # listings
@@ -240,3 +239,35 @@ TSWLatexianTemp*
 
 # generated if using elsarticle.cls
 *.spl
+
+# LaTeXing & Sublime Text
+Output
+
+## -- macOS ignore
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
