--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -1,20 +1,16 @@
 # This is a basic workflow to help you get started with Actions
 
-name: test
+name: debug
 
 # Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-    branches: [ master ]
-    
+on:    
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  test:
+  debug:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -40,8 +36,8 @@ jobs:
           chmod +x dev-install.sh
           ./dev-install.sh -b
 
-      - name: "test tikz-trackschematic"
-        run: |
-          cd test
-          chmod +x testing.sh
-          ./testing.sh
+      - name: Setup upterm session
+        uses: lhotari/action-upterm@v1
+        with:
+          ## limits ssh access and adds the ssh public keys of the listed GitHub users
+          limit-access-to-users: railtoolkit,kaat0
