fixed yaml syntax for github action - now for sure

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -35,6 +35,7 @@ jobs:
       #     package-file: .github/texlive/requirements.txt
       # ##
         uses: paolobrasolin/setup-texlive-action@v1
+        with:
           packages-path: .github/texlive/requirements.txt
 
       - name: "install tikz-trackschematic"
