--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -31,6 +31,7 @@ jobs:
       #     package-file: .github/texlive/requirements.txt
       # ##
         uses: paolobrasolin/setup-texlive-action@v1
+        with:
           packages-path: .github/texlive/requirements.txt
 
       - name: "install tikz-trackschematic"
