--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -25,18 +25,18 @@ jobs:
         uses: actions/checkout@v2
 
       - name: "Setup TeX Live"
-      # ##
-      #   uses: DanySK/setup-texlive-action@master
-      #   with:
-      #     requirements-file: .github/texlive/requirements.txt
-      # ##
-      #   uses: teatimeguest/setup-texlive-action@v1
-      #   with:
-      #     package-file: .github/texlive/requirements.txt
-      # ##
-        uses: paolobrasolin/setup-texlive-action@v1
+        # ##
+        # uses: DanySK/setup-texlive-action@master
+        # with:
+        #   requirements-file: .github/texlive/packages.test.txt
+        ##
+        uses: teatimeguest/setup-texlive-action@v1
         with:
-          packages-path: .github/texlive/requirements.txt
+          package-file: .github/texlive/packages.test.txt
+        # ##
+        # uses: paolobrasolin/setup-texlive-action@v1
+        # with:
+        #   packages-path: .github/texlive/packages.test.txt
 
       - name: "install tikz-trackschematic"
         run: |
