--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -20,7 +20,7 @@ jobs:
         # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
         uses: actions/checkout@v2
 
-      - name: "Setup TeX Live"
+      - name: "setup TeX Live"
         # ##
         # uses: DanySK/setup-texlive-action@master
         # with:
