--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -24,7 +24,7 @@ jobs:
         # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
         uses: actions/checkout@v2
 
-      - name: "Setup TeX Live"
+      - name: "setup TeX Live"
         uses: teatimeguest/setup-texlive-action@v1
         with:
           package-file: .github/texlive/packages.test.txt
