--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -3,7 +3,10 @@
 name: debug
 
 # Controls when the workflow will run
-on:    
+on:
+  push:
+    branches: [ github-action ]
+
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -42,8 +45,8 @@ jobs:
       - name: "setup TeX Live (via paolobrasolin)"
         uses: paolobrasolin/setup-texlive-action@v1
         with:
-          profile-path:  .github/tex/texlive.profile.txt
-          packages-path: .github/tex/packages.test.txt
+          profile-path:  ${{ github.workspace }}/.github/tex/texlive.profile.txt
+          packages-path: ${{ github.workspace }}/.github/tex/packages.test.txt
 
       - name: "install tikz-trackschematic"
         run: chmod +x dev-install.sh && ./dev-install.sh -b
