--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,12 +9,9 @@ on:
     tags:
       - "v*"
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  release:
+  build:
     name: "make release"
       # The type of runner that the job will run on
       runs-on: ubuntu-latest
