fixed 'Syntax error: redirection unexpected' for shell script

--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -72,9 +72,9 @@ jobs:
       # - name: "create tikz-trackschematic package"
       #   run: chmod +x create-release.sh && ./create-release.sh -v ${{ steps.tag.outputs.tag }}
 
-      #   ## opening a debug console
-      # - name: Setup upterm session
-      #   uses: lhotari/action-upterm@v1
-      #   with:
-      #     ## limits ssh access and adds the ssh public keys of the listed GitHub users
-      #     limit-access-to-users: railtoolkit,kaat0
+        ## opening a debug console
+      - name: Setup upterm session
+        uses: lhotari/action-upterm@v1
+        with:
+          ## limits ssh access and adds the ssh public keys of the listed GitHub users
+          limit-access-to-users: railtoolkit,kaat0
