--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -28,6 +28,9 @@ jobs:
 
       - name: "install ghostscript"
         run: sudo apt-get install -y ghostscript
+        
+      - name: "install zip"
+        run: sudo apt-get install -y zip
       
       ###### multiple options for a TeX environment
       #   ##
