--- a/.github/workflows/cffvalidating.yml
+++ b/.github/workflows/cffvalidating.yml
@@ -1,6 +1,6 @@
 ### github action to publish a new CITATION.cff 
 ##
-name: cffconvert
+name: "cff validation"
 
 ## Controls when the workflow will run
 on:
@@ -10,7 +10,7 @@ on:
 
   ## Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-    
+
 jobs:
   validate:
     name: "validate"
