--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -43,17 +43,17 @@ jobs:
       #   with:
       #     requirements-file: .github/tex/packages.test.txt
       #   ##
-      # - name: "setup TeX Live (via teatimeguest)"
-      #   # tlmgr needs updates and fails
-      #   uses: teatimeguest/setup-texlive-action@v1
-      #   with:
-      #     package-file: .github/tex/packages.test.txt
-      #   ##
-      - name: "setup TeX Live (via paolobrasolin)"
-        uses: paolobrasolin/setup-texlive-action@v1
+      - name: "setup TeX Live (via teatimeguest)"
+        uses: teatimeguest/setup-texlive-action@v2
         with:
-          profile-path:  ${{ github.workspace }}/.github/tex/texlive.profile.txt
-          packages-path: ${{ github.workspace }}/.github/tex/packages.test.txt
+          package-file: .github/tex/packages.test.txt
+        ##
+      # - name: "setup TeX Live (via paolobrasolin)"
+      # #   # tlmgr needs updates and fails
+      #   uses: paolobrasolin/setup-texlive-action@v1
+      #   with:
+      #     profile-path:  ${{ github.workspace }}/.github/tex/texlive.profile.txt
+      #     packages-path: ${{ github.workspace }}/.github/tex/packages.test.txt
 
       - name: "install tikz-trackschematic"
         run: chmod +x dev-install.sh && ./dev-install.sh -b
