--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -34,7 +34,7 @@ jobs:
           packages-path: ${{ github.workspace }}/.github/tex/packages.test.txt
 
       - name: "install tikz-trackschematic"
-        run: ./build.sh --batch-mode --local-dev-install
+        run: ./build.sh --batch-mode --install-dev
 
       - name: "test tikz-trackschematic"
         run: ./build.sh --test --verbose
