--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -37,4 +37,4 @@ jobs:
         run: ./build.sh --batch-mode --install-dev
 
       - name: "test tikz-trackschematic"
-        run: ./build.sh --test --verbose
+        run: ./build.sh --batch-mode --test --verbose
