switch for automated CTAN upload to ctan-o-mat

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -75,4 +75,5 @@ jobs:
           id: ${{ steps.create_release.outputs.id }}
 
       # 6. upload new release to CTAN
-      ## TODO
+      - name: CTAN submit
+        run: ctan-o-mat --verbose --submit .github/tex/tikz-trackschematic.pkg
