--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -57,8 +57,9 @@ jobs:
         # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
         uses: actions/checkout@v2
 
+      # download artifact in folder artifact/
       - uses: actions/download-artifact@v3
-        id: download
+      - run: cd artifact
 
       # - name: "install ghostscript"
       #   run: sudo apt-get install -y ghostscript
