--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -48,12 +48,12 @@ jobs:
       # 6. upload artifact to share it with other jobs
       - uses: actions/upload-artifact@v3
         with:
-          path: tikz-trackschematic-v0.7.0.zip
+          path: tikz-trackschematic-${{ steps.tag.outputs.tag }}.zip
           if-no-files-found: error # 'warn' or 'ignore' are also available, defaults to `warn`
 
       - uses: actions/upload-artifact@v3
         with:
-          path: release-note-v0.7.0.md
+          path: release-note-${{ steps.tag.outputs.tag }}.md
           if-no-files-found: warn # 'error' or 'ignore' are also available, defaults to `warn`
 
       - uses: actions/upload-artifact@v3
@@ -71,16 +71,16 @@ jobs:
     name: "publish on github"
     runs-on: ubuntu-latest
     steps:
-      # 1. get varibale ${{ steps.tag.outputs.tag }}
+      # 1. download artifact in folder artifact/
+      - uses: actions/download-artifact@v3
+
+      # 2. get varibale ${{ steps.tag.outputs.tag }}
       - name: "get tag"
         id: tag
         uses: dawidd6/action-get-tag@v1
         with:
           # Optionally strip `v` prefix
           strip_v: false
-
-      # 2. download artifact in folder artifact/
-      - uses: actions/download-artifact@v3
 
       # 3. publish package as new release on github
       - name: "create release"
@@ -119,6 +119,9 @@ jobs:
     steps:
       # 1. download artifact in folder artifact/
       - uses: actions/download-artifact@v3
+      - run: |
+          mv ./artifact/tikz-trackschematic-*.zip ./
+          mv ./artifact/tikz-trackschematic.pkg ./
       
       # 2. install ctan-o-mat
       - name: "setup TeX Live (via paolobrasolin)"
@@ -129,4 +132,43 @@ jobs:
 
       # 3. upload new release to CTAN
       - name: CTAN submit
-        run: ctan-o-mat --verbose --submit artifact/tikz-trackschematic.pkg
+        run: ctan-o-mat --verbose --submit tikz-trackschematic.pkg
+
+  publish_zenodo:
+    needs: create_package
+    name: "publish on zenodo sandbox"
+    runs-on: ubuntu-latest
+    steps:
+      # 1. get varibale ${{ steps.tag.outputs.tag }}
+      - name: "get tag"
+        id: tag
+        uses: dawidd6/action-get-tag@v1
+        with:
+          # Optionally strip `v` prefix
+          strip_v: false
+
+      # 2. checkout the repo for zenodraft/action@0.10.0 to work
+      - name: "checkout"
+        uses: actions/checkout@v2
+
+      # 3. download artifact in folder artifact/ and move it one level up
+      - uses: actions/download-artifact@v3
+      - run: |
+          mv ./artifact/tikz-trackschematic-*.zip ./
+          mv ./artifact/metadata.json ./
+
+      # 4. upload to zenodo
+      - name: "uploading to zenodo sandbox"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ZENODO_ACCESS_TOKEN: ${{ secrets.ZENODO_ACCESS_TOKEN }}
+        uses: zenodraft/action@0.10.0
+        with:
+          collection: 5539844
+          filenames: tikz-trackschematic-${{ steps.tag.outputs.tag }}.zip
+          upsert-doi: true
+          upsert-location: identifiers[1]
+          metadata: metadata.json
+          publish: true
+          sandbox: false
+          verbose: true
