--- a/.github/workflows/zenodo.yaml
+++ b/.github/workflows/zenodo.yaml
@@ -53,6 +53,9 @@ jobs:
 
       # download artifact in folder artifact/
       - uses: actions/download-artifact@v3
+      - run: |
+          mv ./artifact/tikz-trackschematic-*.zip ./
+          mv ./artifact/metadata.json ./
 
       - name: "uploading to zenodo sandbox"
         env:
@@ -63,10 +66,10 @@ jobs:
         with:
           # collection: 5539844
           collection: 1047380
-          filenames: artifact/tikz-trackschematic-v0.7.0.zip
+          filenames: tikz-trackschematic-v0.7.0.zip
           upsert-doi: true
-          upsert-location: identifiers[2]
-          metadata: artifact/metadata.json
+          upsert-location: identifiers[1]
+          metadata: metadata.json
           publish: true
           sandbox: true
           verbose: true
